modification page accueil

--- a/FRONTEND/Dockerfile
+++ b/FRONTEND/Dockerfile
@@ -16,7 +16,7 @@ COPY . .
 RUN npm run build
 
 # Étape 2: Production avec Nginx
-FROM nginx:alpine
+FROM nginx:alpine AS production
 
 # Copier les fichiers buildés
 COPY --from=builder /app/dist /usr/share/nginx/html
@@ -29,3 +29,23 @@ EXPOSE 80
 
 # Démarrer Nginx
 CMD ["nginx", "-g", "daemon off;"]
+
+# Étape 3: Développement avec Vite
+FROM node:20-alpine AS development
+
+WORKDIR /app
+
+# Copier les fichiers de dépendances
+COPY package*.json ./
+
+# Installer les dépendances
+RUN npm ci
+
+# Copier le code source
+COPY . .
+
+# Exposer le port 5173
+EXPOSE 5173
+
+# Démarrer Vite en mode dev
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
