--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+
 
 services:
   # Backend NestJS
@@ -28,9 +28,13 @@ services:
     build:
       context: ./FRONTEND
       dockerfile: Dockerfile
+      target: development
     container_name: flux-frontend
     ports:
-      - "5173:80"
+      - "5173:5173"
+    volumes:
+      - ./FRONTEND:/app
+      - /app/node_modules
     depends_on:
       - backend
     restart: unless-stopped
