--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     container_name: flux-frontend
     ports:
       - "5173:5173"
+    environment:
+      - PROXY_TARGET=http://backend:3000
     volumes:
       - ./FRONTEND:/app
       - /app/node_modules
